Rate img src fix Removed image files

--- a/app/rate/rate.html
+++ b/app/rate/rate.html
@@ -47,10 +47,10 @@
   <div class="col s12 m6">
     <div class="card image-rating {{#if isSelected _id}}z-depth-3 indigo darken-1 blue-grey-text text-lighten-5{{/if}}">
       <div class="card-image">
-        <img src="images/{{fileName}}">
+        <img src="{{imgsrc fileId}}">
       </div>
       <div class="card-content">
-        <p>Some content</p>
+        <!--<p>Some content</p>-->
       </div>
       <div class="card-action">
         <a href="#">Fullscreen</a>
