--- a/app/rate/rate.html
+++ b/app/rate/rate.html
@@ -20,7 +20,7 @@
     <div class="fixed-action-btn">
       <a class="btn-floating btn-large waves-effect waves-light red {{#if isNoneSelected}}disabled{{/if}}"
          id="image-rate-submission">
-        <i class="mdi-content-send"></i>
+        <i class="material-icons">send</i>
       </a>
     </div>
     {{/if}}
