--- a/navigation/client/navigation.html
+++ b/navigation/client/navigation.html
@@ -8,8 +8,11 @@
             <li class="{{#if isActiveRoute 'rate'}}active{{/if}}">
               <a href="{{pathFor 'rate'}}">A-B Rate</a>
             </li>
-            <li class="{{#if isActiveRoute 'images'}}active{{/if}}">
+            <li class="{{#if isActiveRoute 'imageList'}}active{{/if}}">
               <a href="{{pathFor 'imageList'}}">Image Collection</a>
+            </li>
+            <li class="{{#if isActiveRoute 'log'}}active{{/if}}">
+              <a href="{{pathFor 'log'}}">Log</a>
             </li>
           </ul>
         </div>
