--- a/app/image-card/image-card.html
+++ b/app/image-card/image-card.html
@@ -1,7 +1,9 @@
 <template name="image_card">
   <div class="card">
     <div class="card-image">
-      <img src="{{imgsrc fileId}}">
+      <div class="image-square-center">
+        <img src="{{imgsrc fileId}}">
+      </div>
       <!--<span class="card-title">Card Title</span>-->
     </div>
     <div class="card-content">
