--- a/app/layout.html
+++ b/app/layout.html
@@ -1,5 +1,6 @@
 <head>
   <title>A-B-Art</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
